k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto-gateway
  labels:
    app.kubernetes.io/part-of: crypto-gateway
    environment: production
